# tower-finder-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  claude-code-review.yml
backend/clients/: fcc.py  maprad.py
backend/config/: tower_config.json
backend/models/: measurements.py
backend/routes/: towers.py
backend/services/: region_lookup.py  tower_ranking.py
backend/tests/: capture_fixture.py  sweep_parser.py  test_health.py  test_replay_matching.py  test_tower_ranking.py  test_tower_ranking_config.py  test_towers_helpers.py  test_towers_routes.py
backend/tests/fixtures/: sweep-events.ndjson  towers_raw.json
deploy/: smoke-test.sh
docs/superpowers/plans/: 2026-06-06-cicd-setup.md
docs/superpowers/specs/: 2026-06-03-cicd-design.md
frontend/e2e/: tower-finder.spec.ts
frontend/src/components/: SearchForm.tsx
