[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tower-finder-service"
version = "0.1.0"
description = "FastAPI service that ranks broadcast towers near a node from FCC + Maprad data."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
]

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]
include = ["clients*", "routes*", "services*"]

[tool.pytest.ini_options]
pythonpath = [".", "backend"]
testpaths = ["backend/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py310"
